# DataScience-ECL-BE2

./: .gitignore  README.md  affichage.py  main.py  package-lock.json  pyproject.toml
src/: handle_data.py  model.py  model_graph.py  model_validation.py  prepare_data.py  tools.py  utils.py
tests/unit/: test_handle_data.py  test_prepare_data.py
