[project]
name = "datascience-ecl-be2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
